# python-web_hw_13

./: README.md  main.py  pyproject.toml
src/: schemas.py
src/conf/: config.ini
src/database/: db.py  models.py
src/repository/: users.py
src/routes/: auth.py  users.py
src/services/: auth.py
static/javascript/: app.js  register.js
templates/: index.html  main.html  signup.html
